Wrong proportional editing area of influence UI. #75482

Closed
opened 2020-04-07 14:24:42 +02:00 by Gilberto Rodrigues · 20 comments
Contributor

Blender Version
Broken: all.

Short description of error
If you set the pivot point to the 3d cursor for example, the area of influence of proportional edit will mistakenly be drawn around the cursor, as the vertices there are not the the ones affected by it. The proportional edit circle should always be drawn around the selection, as this is what it influences, not around pivot point.

How it is: bug.png

How it would be better: bug2.png

Exact steps for others to reproduce the error

Move cursor away from the cube.
Change pivot point to cursor for example.
Turn on proportional edit
Select on vertice of the cube
Rotate, or Scale or Move
See area of influence be drawn in the wrong place.

**Blender Version** Broken: all. **Short description of error** If you set the pivot point to the 3d cursor for example, the area of influence of proportional edit will mistakenly be drawn around the cursor, as the vertices there are not the the ones affected by it. The proportional edit circle should always be drawn around the selection, as this is what it influences, not around pivot point. How it is: ![bug.png](https://archive.blender.org/developer/F8454538/bug.png) How it would be better: ![bug2.png](https://archive.blender.org/developer/F8454547/bug2.png) **Exact steps for others to reproduce the error** Move cursor away from the cube. Change pivot point to cursor for example. Turn on proportional edit Select on vertice of the cube Rotate, or Scale or Move See area of influence be drawn in the wrong place.
Author
Contributor

Added subscriber: @Gilberto.R

Added subscriber: @Gilberto.R

#97839 was marked as duplicate of this issue

#97839 was marked as duplicate of this issue

#80514 was marked as duplicate of this issue

#80514 was marked as duplicate of this issue

#77981 was marked as duplicate of this issue

#77981 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This would (at least) be problematic in case multiple islands are selected [mutiple influences would need to be drawn then]

This would (at least) be problematic in case multiple islands are selected [mutiple influences would need to be drawn then]
Author
Contributor

The more precise way would be to show the union of the area of circles around each selected vertex but that could be a lot to do. Other softwares use a color fading out, showing not only the correct area of influence, but also the intensity, but that would be a feature request. There should be a simpler way to fix this even if it's not precise. I think that just making it always draw as it does when pivot point is set to median point would be fine.

The more precise way would be to show the union of the area of circles around each selected vertex but that could be a lot to do. Other softwares use a color fading out, showing not only the correct area of influence, but also the intensity, but that would be a feature request. There should be a simpler way to fix this even if it's not precise. I think that just making it always draw as it does when pivot point is set to median point would be fine.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Germano Cavalcante self-assigned this 2020-04-08 16:43:14 +02:00

I agree that this needed to be improved but it involves more than moving the drawing closer to the selection.
More planning is needed and there is even a patch on it -> D4786

Thanks for the report, but the issue reported here is a request for modified/improved behavior and not a bug in current behavior. Closing as this bug tracker is only for bugs and errors.

For user requests and feedback, please use other channels: https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests
For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug

I agree that this needed to be improved but it involves more than moving the drawing closer to the selection. More planning is needed and there is even a patch on it -> [D4786](https://archive.blender.org/developer/D4786) Thanks for the report, but the issue reported here is a request for modified/improved behavior and not a bug in current behavior. Closing as this bug tracker is only for bugs and errors. For user requests and feedback, please use other channels: https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug
Author
Contributor

Sorry, but I feel like the circle drawing around cursor instead of selection is still a bug.

Sorry, but I feel like the circle drawing around cursor instead of selection is still a bug.

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'

It is a limitation, it is not always possible to define the center of the selection.
What is the center when you are selecting two distant vertices?
Marking as Known Issue.

It is a limitation, it is not always possible to define the center of the selection. What is the center when you are selecting two distant vertices? Marking as `Known Issue`.
Author
Contributor

Thank you Germano

Thank you Germano

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'

Closing this since it's working as intended.

Closing this since it's working as intended.
Member

Added subscribers: @Sadlama, @Alaska

Added subscribers: @Sadlama, @Alaska

Added subscriber: @MadMinstrel

Added subscriber: @MadMinstrel

Added subscribers: @Hrofti, @PratikPB2123

Added subscribers: @Hrofti, @PratikPB2123
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75482
No description provided.